@@ -72,8 +72,10 @@
     <template name="include">@#include &lt;wx/menu.h&gt;</template>
     <template name="evt_entry_OnMenuSelection">EVT_MENU( $id, #handler )</template>
 	<template name="evt_connect_OnMenuSelection">this->Connect( $name->GetId(), wxEVT_COMMAND_MENU_SELECTED, #handler );</template>
+    <template name="evt_disconnect_OnMenuSelection">this->Disconnect( wxID_ANY, wxEVT_COMMAND_MENU_SELECTED, #handler );</template>
     <template name="evt_entry_OnUpdateUI">EVT_UPDATE_UI( $id, #handler )</template>
 	<template name="evt_connect_OnUpdateUI">this->Connect( $name->GetId(), wxEVT_UPDATE_UI, #handler );</template>
+  	<template name="evt_disconnect_OnUpdateUI">this->Disconnect( wxID_ANY, wxEVT_UPDATE_UI, #handler );</template>
   </templates>
 
   <templates class="separator">
